@@ -314,9 +314,11 @@ CAMLextern value caml_hash_variant(char const * tag);
 #define Byte(x, i) (((char *) (x)) [i])            /* Also an l-value. */
 #define Byte_u(x, i) (((unsigned char *) (x)) [i]) /* Also an l-value. */
 
-/* Abstract things.  Their contents is not traced by the GC; therefore they
-   must not contain any [value]. Must have odd number so that headers with
-   this tag cannot be mistaken for pointers (see caml_obj_truncate).
+/* Abstract things.  Their contents is not traced by the GC; therefore
+   they must not contain any [value]. Must have odd number so that
+   headers with this tag cannot be mistaken for pointers. Previously
+   used in caml_obj_truncate for a header of the truncated tail of the
+   object.
 */
 #define Abstract_tag 251
 #define Data_abstract_val(v) ((void*) Op_val(v))
